2004-12-16  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
	* Npgsql/NpgsqlConnector.cs: Changed name of portal and prepare prefixes to be all lower case in order to not have case problems when deallocating them.
	* Npgsql/NpgsqlCommand.cs: Fixed gborg 1082. Added support to implicit parameters when calling stored procedures. 

2004-12-05  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
	* Npgsql/NpgsqlConnector (IsValid): Clean mediator after get a connection from pool and test it for validity. This fix a bug which some times occured which made available this test resultset to user when it shouldn't. 

2004-12-07  Raja R Harinath  <rharinath@novell.com>

	* Makefile (CLEAN_FILES): Add $(RESX_RES).
	($(the_lib)): Depend on $(OTHER_RES) too.
	($(RESX_RES)): Pass argument of RESGEN through
	PLATFORM_CHANGE_SEPARATOR_CMD.

2004-12-05  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>

	* Npgsql/NpgsqlCommand.cs: gborg 971 & 1068: Added support for ParameterDirection.Output and ParameterDirection.InputOutput parameters. Now you can use these types of parameters to get results. Thanks Ivan (ivan-sun1 at mail dot ru) and (teste at aslls dot ss) for heads up.

2004-11-26  Raja R Harinath  <rharinath@novell.com>

	* Makefile (OTHER_RES): New.  List of .bmp files.
	(EXTRA_DISTFILES): Distribute them.

2004-11-25  Francisco Figueiredo Jr.  <fxjrlists@yahoo.com>
    
    Updated to 0.7beta3 release.
    * NpgsqlBind.cs:  Minor code cleanup.
    * NpgsqlClosedState.cs: Code formatting.
    * NpgsqlCommand.cs: Code cleanup and updating for new Plan and Portal name generation code.
    * NpgsqlConnection.cs: Fixed contructor log message.
    * NpgsqlConnectionString.cs: Code formatting.
    * NpgsqlConnector.cs:
        ReleasePlansPortals: Added method to release used plans and portals.
        NextPortalName, NextPlanName: Added methods to handle name generation.
    * NpgsqlConnectorPool.cs:
        UngetPooledConnector: Added call to release plans and portals in connector.